--- a/02장/김태형.md
+++ b/02장/김태형.md
@@ -1,6 +1,4 @@
-# 생성자보단 정적 팩토리 메소드를 고려하라
-
-### 생성자의 문제점
+## 기존 생성자의 문제점
 
 ```java
 public class Order {
@@ -22,19 +20,37 @@ public class Order {
 }
 ```
 
-1. 메서드 이름을 만들지 못한다.
+- 메서드 이름을 만들지 못한다.
     
     따라서
     
     - 생성할 때 클래스의 이름만으로 생성해야 하며, 어떠한 의도로 생성했는지 알 수 없다. (파라미터에 null을 넣는등 생성 의도에 따라 생성자에 다른 파라미터가 들어갈 수 있음에도 불구하고)
     - 그래도 파라미터를 다르게 배치하면 여러개의 생성자를 의도에 맞게 다르게 쓸 수도 있지만 그마저도 파라미터의 종류가 같으면 컴파일 에러가 난다. (위의 예시)
+- 협업할 때 해당 객체를 누군가가 생성자로 생성해서 의도에 맞지 않는 코드가 만들어질 수 있다.
+
+이런 문제들이 발생하는 이유는 무엇일까? (예상)
+
+1. 특정 코드의 재사용성이 높다.
     
-    정적 팩토리 메서드 패턴은 메서드 이름을 통해서 제한없는 개수의 객체를 생성하는 메서드를 정의할 수 있다.
+    특정 객체를 인스턴스화해서 활용하는 코드가 여러군데에 존재한다.
     
-    따라서
+2. 다른 로직을 작성하거나, 기존 로직을 수정할 때, 기존에 작성되어 있는 코드들을 이해해야한다.
     
-    - 메서드 이름만 보고도 (내부 구현을 보지 않고도) 어떠한 객체를 받는지 짐작가능하다.
-    - 파라미터의 중복에 구애받지 않을 수 있다.
+    코드를 읽어가면서 의도를 파악하고 어떤 주의사항이나 특징이 있는지 파악해야한다.
+    
+    이때 메서드 이름과 객체의 이름, 파라미터의 이름들이 이런 특징을 파악하는데 중요한 요소가 되는거 같다.
+    
+
+# 생성자보단 정적 팩토리 메소드를 고려하라
+
+### 생성자의 문제점
+
+정적 팩토리 메서드 패턴은 메서드 이름을 통해서 제한없는 개수의 객체를 생성하는 메서드를 정의할 수 있다.
+
+따라서
+
+- 메서드 이름만 보고도 (내부 구현을 보지 않고도) 어떠한 객체를 받는지 짐작가능하다.
+- 파라미터의 중복에 구애받지 않을 수 있다.
 
 ### 정적 팩토리 메서드 단점
 
@@ -100,3 +116,97 @@ public class ExtendExample extends Example{
 객체를 생성할 때 파라미터가 여러개이고, 이러한 코드를 작성해야하는 객체라면 필히 스프링에선 Bean객체들이 아닌 Dto 혹은 Entity와 같은 상태값을 저장하는 객체일 것이다.
 
 메서드의 이름을 보고 인스턴스의 생성 의도를 파악하려고 한다는 것은 인스턴스가 생성되는 곳이 하나가 아닌, 여러부분에서 사용될수록 효율이 좋아지고 이용가치가 커질 것 같다. (만약 Dto인스턴스가 하나의 컨트롤러에서만 사용되고 생성된다면  어차피 이 인스턴스는 이곳에서만 호출되는데 굳이 인스턴스를 정적 팩토리 패턴 메서드까지 써야하는지 의문이 들것 같기 때문이다.
+
+# 생성자에 매개변수가 많다면 빌더를 고려하라
+
+## 필더 패턴 코드
+
+자기 자신을 반환해서 객체 내부의 값을 **연쇄적메서드**로 호출해서 설정하는 방식.
+
+### 장점
+
+1. 유연하다.
+    
+    원하는 값을 넣을 수 있고 뺄 수 있도록 변경하기가 쉽다. 그냥 빌더 패턴을 쓰는 코드에서 해당 필드의 메서드만 빼주면된다.
+    
+2. 명확하다.
+    
+    넣는 값이 인스턴스의 어떤 필드를 차지하는지 메서드 이름을 보고 알 수 있다.
+    
+
+### 단점 (내가 생각하는)
+
+1. Setter랑 근본적으로 뭐가 다른가.
+    
+    인터넷 서칭해본 느낌으로는 빌더 패턴은 빌더를 사용해서 객체를 생성하기 때문에 생성자를 막아놓고 빌더만 사용해서 생성하도록 할 수 있다. (한번만 호출해서 생성하도록 할 수 있다, 수정은 불가능하게)
+    
+2. 정적 팩토리 메서드가 해결한 단점을 해결하지 못한다.
+    
+    필드별로 설정 메서드를 만들어 주는 것이기 때문에 전체 한줄의 코드만 봐서는 어떤 의도를 가진 인스턴스를 생성하고자 하는지 파악하기 힘들어 보인다.
+    
+
+
+# 인스턴스화를 막으려면 private 생성자를 사용해라.
+
+**static 메소드와 static 필드만으로 이루어진 클래스?** — 객체 지향적이지 않은 사고방식이지만, 나름의 쓰임새가 있다.
+
+- `java.lang.Math`나 `java.util.Arrays`처럼 *기본 타입 값*이나 *배열 관련 메소드*들을 모아놓은 것
+- `java.util.Collections`처럼 *특정 인터페이스를 구현하는 객체를 생성해주는 정적 메소드or팩토리*를 모아놓은 것
+- `final 클래스`와 관련한 메소드들을 모아놓을 때도 사용한다. (final 클래스를 상속해 하위 클래스에 메소드를 넣는 것은 불가능하기 때문이다.)
+
+### 스프링 Bean
+
+Bean객체는 생성이 가능하며, private 생성자로 만들면 생성자 주입이 불가능해서 다른 주입 방식을 써야한다.
+
+애초에 스프링 빈 컨테이너 생성시 의존관계가 자동으로 주입되기 때문에 빈객체를 인스턴스화할 일이 없다.
+
+```java
+public class TokenResolver {
+  public static String resolveMemberIdFromToken(String token){
+    int idx=findAndIdx(token);
+    return token.substring(idx);
+  }
+
+  private static int findAndIdx(String token){
+    for(int i=0;i<token.length();i++){
+      if(token.charAt(i)=='&')
+        return i+1;
+    }
+    return 0;
+  }
+}
+```
+
+## 스프링에서 서비스 로직 내에서 객체의 인스턴스를 생성하는 경우
+
+1. ~~HTTP Request Body용 Dto~~
+2. HTTP Response Body용 Dto
+    
+    Http Response를 해주기 위한 인스턴스이기 떄문에 Api 문서와 연관이 깊다. Api를 통해 보여주고 싶은 모든 내용을 담고 있다.
+    
+    스프링에서 여러 로직을 거쳐서 구해온 여러개의 Dto를 조립해서 만드는 경우도 많다.
+    
+3. DB 매핑용 Dto
+    
+    JPA의 장점을 살리기 위해 엔티티로 가져오는 것도 좋은 방법이지만, SQL Function등을 사용해서 결과값이 포함된 값을 가져오고 싶다면 Dto로 가져와서 생성 후 매핑을 해주어야한다.
+    
+4. 중간 계층 데이터 조립용(?) Dto
+    
+    요청에 맞는 Http Response Dto롤 반환하기 위해 여러가지 Dto를 조립해야하는 경우도 있다.
+    
+5. DB Insert용 엔티티
+    
+    DB에 JPA로 insert하고 싶다면 해당 테이블에 대응되는 엔티티를 생성해야한다.
+    
+
+
+# 코드를 쓸 때 중요하다고 생각하는 것
+
+> **낮은 결합도 & 명확한 책임의 분리**
+> 
+
+낮은 결합도가 의미하는 것은 곧 비즈니스 로직이 수정됐을 때 수정할 코드의 양도 적다는 것을 뜻한다.
+
+수정할 코드의 양이 적다는 것은 하나의 요청을 처리할 때 명확히 역할이 정해져 있기 때문에 수정하고자하는 역할을 맡은 코드만 수정하면 된다는 것을 뜻한다.
+
+코드를 전부 읽지 않고 메소드의 내부 로직을 확인해보지 않더라도 어떤 객체가 반환되는지 대충 예상할 수 있고, 메서드의 이름만 보더라도 어떤 역할을 해내는지 이해가 되는것이 명확한 책임이 분리된 코드라고 생각한다.
